# FrictionProject

./: .gitignore  CMakeLists.txt  FrictionProject.pro  GPATH  GRTAGS  GTAGS  LICENSE  README.md  cmake_install.cmake  doxygenconfig  main.cpp  sidepotentialloading.h  static  triangularlattice.h
Config/: config  config.txt  lattice.txt
DataOutput/: datapacket.h  datapackethandler.cpp  datapackethandler.h  dumpable.cpp  dumpable.h  filewrapper.cpp  filewrapper.h  mkdir.h
DataOutput/DataDumper/: datadumper.cpp  datadumper.h
DriverBeam/: driverbeam.cpp  driverbeam.h
ForceModifier/: forcemodifier.cpp  forcemodifier.h
ForceModifier/AbsoluteOmegaDamper/: absoluteomegadamper.h
ForceModifier/ConstantForce/: constantforce.h
ForceModifier/ConstantMoment/: constantmoment.cpp  constantmoment.h
ForceModifier/PotentialPusher/: potentialpusher.cpp  potentialpusher.h
ForceModifier/PotentialSurface/: potentialsurface.cpp  potentialsurface.h
ForceModifier/RelativeVelocityDamper/: relativevelocitydamper.cpp
ForceModifier/SpringFriction/: springfriction.cpp  springfriction.h
ForceModifier/StraightenerForce/: straightenerforce.cpp  straightenerforce.h
FrictionInfo/: frictioninfo.cpp  frictioninfo.h
FrictionSystem/: frictionsystem.cpp  frictionsystem.h
FrictionSystem/BulkStretch/: bulkstretch.cpp  bulkstretch.h
FrictionSystem/BulkWave/: bulkwave.cpp  bulkwave.h
FrictionSystem/Cantilever/: cantilever.h
FrictionSystem/Rotate/: rotate.cpp  rotate.h
FrictionSystem/SidePotentialLoading/: sidepotentialloading.cpp  sidepotentialloading.h
FrictionSystem/TopPotentialLoading/: toppotentialloading.cpp  toppotentialloading.h
InputManagement/ConfigReader/: configreader.cpp  configreader.h
InputManagement/LatticeScanner/: latticescanner.cpp  latticescanner.h
InputManagement/Parameters/: CMakeLists.txt  main.cpp  parameter.h  parameters.cpp  parameters.h
Lattice/: lattice.cpp  lattice.h  simplelattice.cpp  simplelattice.h
Lattice/SquareLattice/: squarelattice.cpp  squarelattice.h
Lattice/TriangularLattice/: triangularlattice.cpp  triangularlattice.h  triangularlatticewithgrooves.cpp  triangularlatticewithgrooves.h
Lattice/UnstructuredLattice/: unstructuredlattice.cpp  unstructuredlattice.h
LatticeInfo/: latticeinfo.cpp  latticeinfo.h
MakeFile/: trollol
Node/: node.cpp  node.h
NodeInfo/: nodeinfo.cpp  nodeinfo.h
Python Scripts/: analyser.py  constructLattice.py  makeData.py  nodeConfiguration.py  nodes.xyz  parameters.txt  readResults.py  viewer.py
Simulation/: simulation.cpp  simulation.h
Vec3/: vec3.cpp  vec3.h
abeltools/: SystematicStudy.py  computer_list.txt  config.txt  filestosend.txt  grooves.py  send.sh  sendtoabel.sh
abeltools/Simulation-27-01-17/grooveHeight1-grooveSize0/: config.txt
abeltools/Simulation-27-01-17/grooveHeight1-grooveSize6/: config.txt
abeltools/Simulation-27-01-17/grooveHeight1-grooveSize8/: config.txt
abeltools/Simulation-27-01-17/grooveHeight2-grooveSize6/: config.txt
abeltools/Simulation-27-01-17/grooveHeight2-grooveSize8/: config.txt  job.sh
abeltools/Simulation-27-01-17/grooveHeight3-grooveSize6/: config.txt
abeltools/Simulation-27-01-17/grooveHeight3-grooveSize8/: config.txt
abeltools/Simulation-27-01-17/grooveHeight4-grooveSize6/: config.txt
abeltools/Simulation-27-01-17/grooveHeight4-grooveSize8/: config.txt
analysis/: analyze.py  analyzer.py  dataio.py  friction.py  friction_data_2018-1-5  graphicalanalyzer.py  interactiveplot.py  renderxyz.py  simpleAnalyzer.py
converter/: CMakeLists.txt  main.cpp
input/: interfaceStructure.txt  lattice.xyz  parameters.txt
scripts/: analyser.py  constructLattice.py  frontVel.py  klyngeyngler.py  nodeConfiguration.py  parameters.txt
simulate/: CMakeLists.txt  FrictionProject.pro
simulate/doc/: doxygenconfig
simulate/input/: parameters.txt
simulate/src/: main.cpp
simulate/src/DataOutput/: datapacket.cpp  datapackethandler.cpp  filewrapper.h
simulate/src/DriverBeam/: driverbeam.cpp  driverbeam.h
simulate/src/ForceModifier/: forcemodifier.h
simulate/src/ForceModifier/AbsoluteOmegaDamper/: absoluteomegadamper.cpp
simulate/src/ForceModifier/ConstantForce/: constantforce.cpp
simulate/src/ForceModifier/PotentialPusher/: potentialpusher.cpp
simulate/src/ForceModifier/RelativeVelocityDamper/: relativevelocitydamper.cpp  relativevelocitydamper.h
simulate/src/ForceModifier/SpringFriction/: springfriction.h
simulate/src/FrictionInfo/: frictioninfo.h
simulate/src/FrictionSystem/BulkWave/: bulkwave.cpp
simulate/src/FrictionSystem/Cantilever/: cantilever.cpp
simulate/src/FrictionSystem/SidePotentialLoading/: sidepotentialloading.h
simulate/src/FrictionSystem/TopPotentialLoading/: toppotentialloading.cpp
simulate/src/InputManagement/LatticeScanner/: latticescanner.cpp
simulate/src/InputManagement/Parameters/: parameters.cpp  parameters.h
simulate/src/Lattice/: lattice.cpp  simplelattice.cpp  simplelattice.h
simulate/src/Lattice/TriangularLattice/: triangularlattice.cpp  triangularlatticewithgrooves.cpp  triangularlatticewithgrooves.h
simulate/src/Lattice/UnstructuredLattice/: unstructuredlattice.h
simulate/src/LatticeInfo/: latticeinfo.cpp  latticeinfo.h
simulate/src/Node/: node.cpp  node.h
simulate/src/Simulation/: simulation.cpp  simulation.h
utilities/: klyngeyngler.py  render.py
utilities/converter/: CMakeLists.txt
utilities/converter/src/: converter.cpp  converter.h
